--- a/master_penilaian/templates/master_penilaian/entry_nilai.html
+++ b/master_penilaian/templates/master_penilaian/entry_nilai.html
@@ -21,22 +21,6 @@
     <div class="row">
         <div class="col-12">
             <div class="page-title-box">
-                <div class="page-title-right">
-                    <form class="d-flex">
-                        <div class="input-group">
-                            <input type="text" class="form-control form-control-light" placeholder="Cari Mitra">
-                            <span class="input-group-text bg-primary border-primary text-white">
-                                <i class="mdi mdi-calendar-range font-13"></i>
-                            </span>
-                        </div>
-                        <a href="javascript: void(0);" class="btn btn-primary ms-2">
-                            <i class="mdi mdi-autorenew"></i>
-                        </a>
-                        <a href="javascript: void(0);" class="btn btn-primary ms-1">
-                            <i class="mdi mdi-filter-variant"></i>
-                        </a>
-                    </form>
-                </div>
                 <h4 class="page-title">Dashboard</h4>
             </div>
         </div>
@@ -103,30 +87,22 @@
         <div class="col-xl-7 col-lg-6">
             <div class="card card-h-100">
                 <div class="card-body">
-                    <div class="dropdown float-end">
-                        <a href="#" class="dropdown-toggle arrow-none card-drop" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="mdi mdi-dots-vertical"></i>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-end">
-                            <!-- item-->
-                            <a href="javascript:void(0);" class="dropdown-item">Sales Report</a>
-                            <!-- item-->
-                            <a href="javascript:void(0);" class="dropdown-item">Export Report</a>
-                            <!-- item-->
-                            <a href="javascript:void(0);" class="dropdown-item">Profit</a>
-                            <!-- item-->
-                            <a href="javascript:void(0);" class="dropdown-item">Action</a>
-                        </div>
-                    </div>
                     <h4 class="header-title mb-3">Penilaian Mitra Global</h4>
-
-                    <div class="table-responsive-sm" style="max-height: 200px; overflow-y: schroll;display:block">
-                        <table class="table table-centered table-striped dt-responsive nowrap w-100" id="ranking-global">
+                    <form class="d-flex mb-2">
+                        <div class="input-group">
+                            <input type="text" class="form-control form-control-light" placeholder="Cari Mitra" id="search-mitra">
+                        </div>
+                        <a href="javascript: void(0);" class="btn btn-primary ms-2">
+                            <i class="mdi mdi-autorenew"></i>
+                        </a>
+                    </form>
+                    <div class="table-responsive" style="max-height: 250px; overflow-y: schroll; display:block">
+                        <table class="table table-centered table-hover dt-responsive nowrap w-100" id="ranking-global">
                             <thead>
                                 <tr>
                                     <th>Wilayah (Kecamatan)</th>
                                     <th>Nama Mitra</th>
-                                    <th class="text-center">Rerata Nilai</th>
+                                    <th class="text-center">Rerata Nilai Akhir</th>
                                     <th>Ranking</th>
                                 </tr>
                             </thead>
@@ -404,7 +380,12 @@
                 "X-Requested-With": "XMLHttpRequest",
                 "X-CSRFToken": '{{csrf_token}}',
             },
-            "type": "POST"
+            "type": "POST",
+            "data": function (d){
+                return $.extend({}, d, {
+                    "search_mitra": $('#search-mitra').val(),
+                })
+            },
         },
         columns :[
             {"data": 'wilayah'},
@@ -454,6 +435,10 @@
         });
 
     }
+
+    $('#search-mitra').on("keyup", () => {
+        table3.draw()
+    })
 
     $('#formPenilaianPetugas').on('submit', function(e){
         e.preventDefault()
