--- a/master_penilaian/templates/master_penilaian/nilai-mitra.html
+++ b/master_penilaian/templates/master_penilaian/nilai-mitra.html
@@ -60,7 +60,7 @@
 
                     <li class="nav-item d-none" id="nav-item-import">
                         <a href="#import-tab" data-bs-toggle="tab" aria-expanded="true" class="nav-link">
-                            Import
+                            Import Penilaian
                         </a>
                     </li>
                 </ul> <!-- end nav-->
@@ -232,6 +232,7 @@
 
                       <div class="tab-pane" id="import-tab">
                         <h5>Preview File Upload</h5>
+                        <p>** Untuk menghindari error saat upload penilaian mitra, kami menyarankan untuk upload penilaian secara bertahap (batching), <u>misalnya 50 mitra dalam sekali upload</u>. </p>
                         <div class="table-responsive">
                             <table id="preview-data-upload" class="table table-sm table-hover w-100 dt-responsive nowrap">
                                 <thead>
@@ -252,7 +253,7 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="text-sm-end">
-                                    <button type="button" class="btn btn-success mb-2 me-1" id="confirm-submit-file"><i class="mdi mdi-refresh"></i>Upload File</button>
+                                    <button type="button" class="btn btn-success mb-2 me-1" id="confirm-submit-file"><i class="mdi mdi-send-check"></i>&ensp; Upload File</button>
                                 </div>
                             </div><!-- end col-->
                         </div>
