--- a/master_petugas/templates/master_petugas/petugas.html
+++ b/master_petugas/templates/master_petugas/petugas.html
@@ -119,8 +119,7 @@
                         </div>
                     </div>
                     <h4 class="header-title mb-3">Penilaian Mitra Global</h4>
-
-                    <div class="table-responsive-sm" style="max-height: 200px; overflow-y: schroll;display:block">
+                    <div class="table-responsive" style="max-height: 250px; overflow-y: schroll;display:block">
                         <table class="table table-centered table-striped dt-responsive nowrap w-100" id="ranking-global">
                             <thead>
                                 <tr>
@@ -190,7 +189,12 @@
                     "X-Requested-With": "XMLHttpRequest",
                     "X-CSRFToken": '{{csrf_token}}',
                 },
-                "type": "POST"
+                "type": "POST",
+                "data": function (d){
+                    return $.extend({}, d, {
+                        "search_mitra": $('#search-mitra').val(),
+                    })
+                },
             },
             columns :[
                 {"data": 'wilayah'},
@@ -253,5 +257,9 @@
                 $(".dataTables_paginate > .pagination").addClass("pagination-rounded");
             },
         });
+
+        $('#search-mitra').on("keyup", () => {
+            table2.draw()
+        })
     </script>
 {% endblock js-extender %}
